# cfu

./: .clangd  CMakeLists.txt  CMakePresets.json
assets/data/: balance.json  level-1.json
assets/vox/: door.vox  floor.vox  player.vox  stair.vox  wall.vox
src/: CMakeLists.txt
src/cmake/: deps.cmake
src/entt_editor/: CMakeLists.txt  entt_editor.hpp
src/game/: CMakeLists.txt  constants.hpp  game.cpp  game.hpp  plugin.cpp  states.hpp
src/game/audio/: components.cpp  components.hpp  resource.cpp  resource.hpp  systems.cpp  systems.hpp
src/game/background/: components.cpp  components.hpp  systems.cpp  systems.hpp
src/game/camera/: components.hpp  systems.cpp  systems.hpp
src/game/combat/: components.cpp  components.hpp
src/game/data/: components.cpp  components.hpp  systems.cpp  systems.hpp
src/game/dev/: commands.hpp  components.hpp  systems.cpp  systems.hpp  utils.cpp  utils.hpp
src/game/fonts/: resource.cpp  resource.hpp  systems.cpp  systems.hpp
src/game/in_game/: components.hpp  state.cpp  state.hpp
src/game/main_menu/: components.hpp  state.cpp  state.hpp
src/game/physics/: components.cpp  components.hpp  systems.cpp  systems.hpp
src/game/player/: components.cpp  components.hpp  systems.cpp
src/game/render_texture/: components.hpp  systems.cpp  systems.hpp
src/game/shapes/: components.cpp  components.hpp  systems.cpp  systems.hpp
src/game/solids/: components.cpp  components.hpp  systems.cpp  systems.hpp
src/game/textures/: resource.cpp  resource.hpp  systems.cpp  systems.hpp
src/game/tilemap/: components.cpp  components.hpp  systems.cpp  systems.hpp
src/game/vox/: components.hpp  resource.cpp  resource.hpp  systems.cpp  systems.hpp
src/host/: CMakeLists.txt  main.cpp
